cabal-version:      3.0
name:               bypher
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             jlsymondspatel
maintainer:         jlsymondspatel

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  BookCypher

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      random ==1.2.1.1,
                      split ==0.2.3.5
    hs-source-dirs:   lib
    default-language: Haskell2010

executable bypher
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        bypher

    hs-source-dirs:   app
    default-language: Haskell2010
